--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+body {
+  font-family: Verdana, Tahoma, sans-serif;
+}
+
+.first {
+  margin-top: 60px;
+}
+
+
+
+
+
+
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -6,6 +20,7 @@ ul {
   background-color: #333;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
 }
 
